# FreshLogger

./: .gitignore  API_REFERENCE.md  BEST_PRACTICES.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ENTERPRISE_TEST_REPORT.md  EdgeCaseTests.cpp  LICENSE  Logger.hpp  LoggerTest.cpp  MacroTest.cpp  Makefile  PERFORMANCE_BENCHMARK_GUIDE.md  PerformanceTest.cpp  QUALITY_STANDARDS.md  README.md  SECURITY.md  SimpleLoggerTest.cpp  StressTest.cpp  TECHNICAL_ANALYSIS.md  TESTING.md  TROUBLESHOOTING.md  config.json  example.cpp  security-suppressions.xml
.build_cache/: build_info.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  version-bump.yml
current_performance/: comparison.json  current_metrics.json  performance_report.html  performance_results.xml  stress_results.xml
parallel_test_reports/: performance_tests_report.xml  simple_tests_report.xml  stress_tests_report.xml  unit_tests_report.xml
performance_baselines/: 20250815_20250815_173625.json
scripts/: build_cache_manager.sh  parallel_test_runner.sh  performance_regression_detector.sh
